--- a/src/main/resources/fxml/IssueBookPage.fxml
+++ b/src/main/resources/fxml/IssueBookPage.fxml
@@ -1,14 +1,150 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="fxml.IssueBookPage"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane id="AnchorPane" prefHeight="509.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.IssueBookPageController">
+   <children>
+      <AnchorPane prefHeight="21.0" prefWidth="784.0" style="-fx-background-color: #1e2d47;" />
+      <AnchorPane layoutY="21.0" prefHeight="489.0" prefWidth="392.0" style="-fx-background-color: #dce6e5;">
+         <children>
+            <TextField fx:id="bookIDField" layoutX="109.0" layoutY="110.0" prefHeight="25.0" prefWidth="216.0" />
+            <TextField fx:id="searchBookID" layoutX="109.0" layoutY="29.0" prefHeight="26.0" prefWidth="205.0" promptText="Enter book ID" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;" />
+            <TextField fx:id="bookISBNField" layoutX="109.0" layoutY="157.0" prefHeight="25.0" prefWidth="216.0" />
+            <TextField fx:id="bookTitleField" layoutX="109.0" layoutY="204.0" prefHeight="25.0" prefWidth="216.0" />
+            <TextField fx:id="bookAuthorField" layoutX="109.0" layoutY="248.0" prefHeight="25.0" prefWidth="216.0" />
+            <TextField fx:id="bookCategoryField" layoutX="109.0" layoutY="297.0" prefHeight="25.0" prefWidth="216.0" />
+            <TextField fx:id="bookPublisherField" layoutX="109.0" layoutY="329.0" prefHeight="25.0" prefWidth="216.0" />
+            <TextField fx:id="bookQuantityField" layoutX="127.0" layoutY="364.0" prefHeight="25.0" prefWidth="216.0" />
+            <TextField fx:id="bookImagePathField" layoutX="119.0" layoutY="390.0" prefHeight="25.0" prefWidth="216.0" />
+            <Label layoutX="21.0" layoutY="32.0" text="Enter code">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="24.0" layoutY="113.0" prefHeight="19.0" prefWidth="28.0" text="ID:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="24.0" layoutY="160.0" text="ISBN :">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="23.0" layoutY="207.0" text="Title :">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="22.0" layoutY="251.0" text="Author :">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="29.0" layoutY="300.0" text="Category:">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="30.0" layoutY="332.0" text="Publisher">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="30.0" layoutY="358.0" text="Quantity :">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label layoutX="34.0" layoutY="384.0" text="ImagePath :">
+               <font>
+                  <Font size="13.0" />
+               </font>
+            </Label>
+            <Label fx:id="msgLabel" layoutX="93.0" layoutY="455.0" prefHeight="17.0" prefWidth="187.0" textFill="#b96909" />
+            <Button fx:id="searchBookBtn" layoutX="314.0" layoutY="30.0" mnemonicParsing="false" onAction="#HandleSearchBook" prefHeight="25.0" prefWidth="77.0" text="Search">
+               <graphic>
+                  <FontAwesomeIconView fill="#282424" glyphName="SEARCH" size="1.4em" wrappingWidth="20.59999942779541" />
+               </graphic>
+            </Button>
+            <Button fx:id="clearBookField" layoutX="157.0" layoutY="442.0" mnemonicParsing="false" onAction="#HandleClearAllBookField" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #bfbfc7;" text="Clear" />
+            <Button fx:id="backBtn" layoutX="28.0" layoutY="435.0" mnemonicParsing="false" style="-fx-background-color: TRANSPARENT;" text="Go Back">
+               <graphic>
+                  <FontAwesomeIconView glyphName="ANGLE_DOUBLE_LEFT" size="2.5em" />
+               </graphic>
+            </Button>
+         </children>
+      </AnchorPane>
+      <Label layoutX="417.0" layoutY="52.0" text="Enter ID">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <TextField fx:id="searchStudentID" layoutX="499.0" layoutY="49.0" prefHeight="26.0" prefWidth="205.0" promptText="Enter student ID" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;" />
+      <Button fx:id="searchStudentBtn" layoutX="704.0" layoutY="49.0" mnemonicParsing="false" onAction="#HandleSearchStudent" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: transparent;" text="Search">
+         <graphic>
+            <FontAwesomeIconView fill="#282424" glyphName="SEARCH" size="1.4em" wrappingWidth="20.59999942779541" />
+         </graphic>
+      </Button>
+      <TextField fx:id="studentIDField" layoutX="518.0" layoutY="115.0" prefHeight="25.0" prefWidth="216.0" />
+      <TextField fx:id="studentNameField" layoutX="518.0" layoutY="155.0" prefHeight="25.0" prefWidth="216.0" />
+      <TextField fx:id="studentSchoolField" layoutX="518.0" layoutY="196.0" prefHeight="25.0" prefWidth="216.0" />
+      <TextField fx:id="studentEmailField" layoutX="518.0" layoutY="239.0" prefHeight="25.0" prefWidth="216.0" />
+      <TextField fx:id="studentPhoneNumberField" layoutX="518.0" layoutY="277.0" prefHeight="25.0" prefWidth="216.0" />
+      <TextField fx:id="studentAddressLineField" layoutX="518.0" layoutY="321.0" prefHeight="25.0" prefWidth="216.0" />
+      <DatePicker fx:id="studentBirthdayField" layoutX="518.0" layoutY="362.0" prefHeight="25.0" prefWidth="216.0" />
+      <DatePicker fx:id="issueDate" layoutX="518.0" layoutY="417.0" prefHeight="25.0" prefWidth="216.0" />
+      <Label layoutX="418.0" layoutY="118.0" text="ID">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="416.0" layoutY="158.0" text="Name">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="420.0" layoutY="199.0" prefHeight="19.0" prefWidth="40.0" text="School">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="418.0" layoutY="242.0" text="Email">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="417.0" layoutY="280.0" text="PhoneNumber">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="420.0" layoutY="324.0" text="AddressLine">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="419.0" layoutY="365.0" text="Birthday">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Label layoutX="412.0" layoutY="420.0" text="Date Issue:">
+         <font>
+            <Font size="13.0" />
+         </font>
+      </Label>
+      <Button fx:id="issueBookBtn" layoutX="548.0" layoutY="459.0" mnemonicParsing="false" onAction="#HandleIssueBook" prefHeight="29.0" prefWidth="155.0" style="-fx-background-color: #91460c; -fx-background-radius: 7;" text="ISSUE" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font>
+      </Button>
+      <Button fx:id="clearStudentFIeld" layoutX="422.0" layoutY="469.0" mnemonicParsing="false" onAction="#HandleClearAllStudentField" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #bfbfc7;" text="Clear" />
+   </children>
 </AnchorPane>
