--- a/src/main/resources/fxml/AddBookPage.fxml
+++ b/src/main/resources/fxml/AddBookPage.fxml
@@ -19,7 +19,6 @@
                      </font>
                   </Label>
                   <FontAwesomeIconView fill="WHITE" glyphName="BOOK" layoutX="365.0" layoutY="62.0" size="3em" text="" />
-                  <Button fx:id="backBtn" layoutX="23.0" layoutY="35.0" mnemonicParsing="false" style="-fx-background-color: TRANSPARENT;" textFill="WHITE" />
                </children>
             </AnchorPane>
             <TextField fx:id="bookIDField" layoutX="280.0" layoutY="104.0" prefHeight="25.0" prefWidth="216.0" promptText="Enter book ID" />
@@ -68,7 +67,8 @@
                </font>
             </Label>
             <Button fx:id="clearAllField" layoutX="110.0" layoutY="539.0" mnemonicParsing="false" onAction="#HandleClearAllField" prefHeight="30.0" prefWidth="124.0" style="-fx-background-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-background-radius: 7;" text="CLEAR" textFill="WHITE" />
-            <Button fx:id="addBookBtn" layoutX="353.0" layoutY="539.0" mnemonicParsing="false" onAction="#HandleAddBookBtn" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-background-radius: 7;" text="ADD BOOK" textFill="WHITE" />
+            <Button fx:id="addBookBtn" layoutX="266.0" layoutY="539.0" mnemonicParsing="false" onAction="#HandleAddBookBtn" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-background-radius: 7;" text="ADD BOOK" textFill="WHITE" />
+            <Button fx:id="addBookWithApiBtn" layoutX="441.0" layoutY="539.0" mnemonicParsing="false" onAction="#HandleAddBookWithApiBtn" prefHeight="30.0" prefWidth="142.0" style="-fx-background-color: linear-gradient(to left top, #d6a8c2, #c8a4c4, #b9a1c4, #a99ec2, #999bbf, #92a1c5, #8ca8c9, #86aecc, #88c0d9, #8ed2e3, #97e3ea, #a6f4ef);; -fx-background-radius: 7;" text="ADD BOOK WITH API" textFill="WHITE" />
             <Label fx:id="msgLabel" layoutX="110.0" layoutY="498.0" prefHeight="18.0" prefWidth="381.0" textFill="#b96909" />
             <Button fx:id="backBtn" layoutX="32.0" layoutY="535.0" mnemonicParsing="false" onAction="#HandleBackToDashboard" prefHeight="38.0" prefWidth="58.0" style="-fx-background-color: transparent;">
                <graphic>
