--- a/src/main/resources/fxml/AddStudentPage.fxml
+++ b/src/main/resources/fxml/AddStudentPage.fxml
@@ -19,8 +19,7 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Label>
-                  <FontAwesomeIconView fill="WHITE" glyphName="STUDENT" layoutX="360.0" layoutY="54.0" size="3em" />
-                  <Button fx:id="backBtn" layoutX="23.0" layoutY="35.0" mnemonicParsing="false" style="-fx-background-color: TRANSPARENT;" textFill="WHITE" />
+                  <FontAwesomeIconView fill="WHITE" glyphName="USER_PLUS" layoutX="357.0" layoutY="58.0" size="3em" />
                </children>
             </AnchorPane>
             <TextField fx:id="studentIDField" layoutX="275.0" layoutY="105.0" prefHeight="25.0" prefWidth="241.0" promptText="Enter student ID" />
