--- a/src/main/resources/fxml/ReturnBookPage.fxml
+++ b/src/main/resources/fxml/ReturnBookPage.fxml
@@ -10,74 +10,61 @@
 
 <AnchorPane id="AnchorPane" prefHeight="509.0" prefWidth="784.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.limt.Controllers.ReturnBookPageController">
     <children>
-        <AnchorPane prefHeight="511.0" prefWidth="392.0">
-            <children>
-                <TextField fx:id="searchBookID" layoutX="102.0" layoutY="29.0" prefHeight="26.0" prefWidth="205.0" promptText="Enter book ID" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;" />
-                <TextField fx:id="bookIDField" layoutX="100.0" layoutY="87.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ID" />
-            <Button fx:id="scanISBNBtn" layoutX="320.0" layoutY="128.0" mnemonicParsing="false" onAction="#HandleScanISBNBook" prefHeight="26.0" prefWidth="68.0" style="-fx-background-color: #bfbfc7;" text="Scan" />
-                <TextField fx:id="bookISBNField" layoutX="100.0" layoutY="129.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ISBN" />
-                <TextField fx:id="bookTitleField" layoutX="100.0" layoutY="171.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Title" />
-                <TextField fx:id="bookAuthorField" layoutX="100.0" layoutY="213.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Author" />
-                <TextField fx:id="bookCategoryField" layoutX="100.0" layoutY="255.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Category" />
-                <TextField fx:id="bookPublisherField" layoutX="100.0" layoutY="297.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Publisher" />
-                <TextField fx:id="bookImagePathField" layoutX="100.0" layoutY="339.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ImagePath" />
-                <Label layoutX="21.0" layoutY="30.0" text="Enter ID :">
-                    <font>
-                        <Font size="13.0" />
-                    </font>
-                </Label>
-                <Label layoutX="21.0" layoutY="90.0" prefHeight="19.0" prefWidth="28.0" text="ID :">
-                    <font>
-                        <Font size="13.0" />
-                    </font>
-                </Label>
-                <Label layoutX="21.0" layoutY="132.0" text="ISBN :">
-                    <font>
-                        <Font size="13.0" />
-                    </font>
-                </Label>
-                <Label layoutX="21.0" layoutY="174.0" text="Title :">
-                    <font>
-                        <Font size="13.0" />
-                    </font>
-                </Label>
-                <Label layoutX="21.0" layoutY="217.0" text="Author :">
-                    <font>
-                        <Font size="13.0" />
-                    </font>
-                </Label>
-                <Label layoutX="21.0" layoutY="258.0" text="Category :">
-                    <font>
-                        <Font size="13.0" />
-                    </font>
-                </Label>
-                <Label layoutX="21.0" layoutY="300.0" text="Publisher :">
-                    <font>
-                        <Font size="13.0" />
-                    </font>
-                </Label>
-                <Label layoutX="21.0" layoutY="341.0" text="ImagePath :">
-                    <font>
-                        <Font size="13.0" />
-                    </font>
-                </Label>
-                <Label fx:id="msgLabel" layoutX="21.0" layoutY="429.0" prefHeight="18.0" prefWidth="331.0" textFill="#b96909" />
-                <Button fx:id="searchBookBtn" layoutX="320.0" layoutY="30.0" mnemonicParsing="false" onAction="#HandleSearchBook" prefHeight="26.0" prefWidth="68.0" style="-fx-background-color: #bfbfc7;" text="Search" />
-                <Button fx:id="clearBookField" layoutX="21.0" layoutY="385.0" mnemonicParsing="false" onAction="#HandleClearAllBookField" prefHeight="26.0" prefWidth="68.0" style="-fx-background-color: #bfbfc7;" text="Clear" />
-                <Button fx:id="backBtn" layoutX="15.0" layoutY="453.0" mnemonicParsing="false" style="-fx-background-color: TRANSPARENT;" text="Go Back">
-                    <graphic>
-                        <FontAwesomeIconView glyphName="ANGLE_DOUBLE_LEFT" size="2.5em" />
-                    </graphic>
-                </Button>
-            </children>
-        </AnchorPane>
-        <Label layoutX="417.0" layoutY="30.0" text="Enter ID :">
+          <TextField fx:id="bookIDField" layoutX="116.0" layoutY="87.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ID" />
+          <TextField fx:id="bookISBNField" layoutX="116.0" layoutY="129.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ISBN" />
+          <TextField fx:id="bookTitleField" layoutX="116.0" layoutY="171.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Title" />
+          <TextField fx:id="bookAuthorField" layoutX="116.0" layoutY="213.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Author" />
+          <TextField fx:id="bookCategoryField" layoutX="116.0" layoutY="255.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Category" />
+          <TextField fx:id="bookPublisherField" layoutX="116.0" layoutY="297.0" prefHeight="25.0" prefWidth="216.0" promptText="Book Publisher" />
+          <TextField fx:id="bookImagePathField" layoutX="116.0" layoutY="339.0" prefHeight="25.0" prefWidth="216.0" promptText="Book ImagePath" />
+          <Label layoutX="30.0" layoutY="89.0" prefHeight="19.0" prefWidth="28.0" text="ID :">
+              <font>
+                  <Font size="13.0" />
+              </font>
+          </Label>
+          <Label layoutX="30.0" layoutY="131.0" text="ISBN :">
+              <font>
+                  <Font size="13.0" />
+              </font>
+          </Label>
+          <Label layoutX="30.0" layoutY="173.0" text="Title :">
+              <font>
+                  <Font size="13.0" />
+              </font>
+          </Label>
+          <Label layoutX="30.0" layoutY="216.0" text="Author :">
+              <font>
+                  <Font size="13.0" />
+              </font>
+          </Label>
+          <Label layoutX="30.0" layoutY="258.0" text="Category :">
+              <font>
+                  <Font size="13.0" />
+              </font>
+          </Label>
+          <Label layoutX="30.0" layoutY="301.0" text="Publisher :">
+              <font>
+                  <Font size="13.0" />
+              </font>
+          </Label>
+          <Label layoutX="30.0" layoutY="341.0" text="ImagePath :">
+              <font>
+                  <Font size="13.0" />
+              </font>
+          </Label>
+          <Label fx:id="msgLabel" layoutX="30.0" layoutY="397.0" prefHeight="18.0" prefWidth="297.0" textFill="#b96909" />
+          <Button fx:id="backBtn" layoutX="6.0" layoutY="462.0" mnemonicParsing="false" style="-fx-background-color: TRANSPARENT;" text="Go Back">
+              <graphic>
+                  <FontAwesomeIconView glyphName="ANGLE_DOUBLE_LEFT" size="2.5em" />
+              </graphic>
+          </Button>
+        <Label layoutX="179.0" layoutY="30.0" text="Enter Issue ID :">
             <font>
                 <Font size="13.0" />
             </font>
         </Label>
-        <TextField fx:id="searchStudentID" layoutX="498.0" layoutY="26.0" prefHeight="26.0" prefWidth="205.0" promptText="Enter student ID" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;" />
-        <Button fx:id="searchStudentBtn" layoutX="712.0" layoutY="28.0" mnemonicParsing="false" onAction="#HandleSearchStudent" prefHeight="26.0" prefWidth="68.0" style="-fx-background-color: #bfbfc7;" text="Search" />
+        <TextField fx:id="searchIssueIDField" layoutX="289.0" layoutY="26.0" prefHeight="26.0" prefWidth="205.0" promptText="Enter Issue ID" style="-fx-background-color: transparent; -fx-border-color: black; -fx-border-width: 0px 0px 1px 0px;" />
+        <Button fx:id="searchIssueID" layoutX="518.0" layoutY="26.0" mnemonicParsing="false" onAction="#HandleSearchIssueID" prefHeight="26.0" prefWidth="62.0" style="-fx-background-color: #bfbfc7;" text="Search" />
         <TextField fx:id="studentIDField" layoutX="518.0" layoutY="87.0" prefHeight="25.0" prefWidth="216.0" promptText="Student ID" />
         <TextField fx:id="studentNameField" layoutX="518.0" layoutY="129.0" prefHeight="25.0" prefWidth="216.0" promptText="Student Name" />
         <TextField fx:id="studentSchoolField" layoutX="518.0" layoutY="171.0" prefHeight="25.0" prefWidth="216.0" promptText="Student School" />
@@ -131,12 +118,12 @@
             <Font size="13.0" />
          </font>
       </Label>
-        <Button fx:id="returnBookBtn" layoutX="578.0" layoutY="467.0" mnemonicParsing="false" onAction="#HandleReturnBook" prefHeight="29.0" prefWidth="155.0" style="-fx-background-color: #91460c; -fx-background-radius: 7;" text="ISSUE" textFill="WHITE">
+        <Button fx:id="returnBookBtn" layoutX="314.0" layoutY="462.0" mnemonicParsing="false" onAction="#HandleReturnBook" prefHeight="29.0" prefWidth="155.0" style="-fx-background-color: #91460c; -fx-background-radius: 7;" text="ISSUE" textFill="WHITE">
             <font>
                 <Font name="System Bold" size="13.0" />
             </font>
         </Button>
-        <Button fx:id="clearStudentFIeld" layoutX="417.0" layoutY="469.0" mnemonicParsing="false" onAction="#HandleClearAllStudentField" prefHeight="25.0" prefWidth="77.0" style="-fx-background-color: #bfbfc7;" text="Clear" />
+        <Button fx:id="clearAllField" layoutX="598.0" layoutY="26.0" mnemonicParsing="false" onAction="#HandleClearAllField" prefHeight="26.0" prefWidth="90.0" style="-fx-background-color: #bfbfc7;" text="Clear All Field" />
       <DatePicker fx:id="returnDate" layoutX="518.0" layoutY="423.0" prefHeight="25.0" prefWidth="216.0" promptText="Return Date" />
     </children>
 </AnchorPane>
